haproxy (1.4.23-1) UNRELEASED; urgency=low

  * New upstream version (Closes: #674447, #643650, #678953)

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 11 Apr 2013 13:37:16 +0300

haproxy (1.4.15-1) unstable; urgency=low

  * New upstream release with critical bug fix (Closes: #631351)

 -- Christo Buschek <crito@30loops.net>  Thu, 14 Jul 2011 18:17:05 +0200

haproxy (1.4.13-1) unstable; urgency=low

  * New maintainer upload (Closes: #615246)
  * New upstream release
  * Standards-version goes 3.9.1 (no change)
  * Added patch bashism (Closes: #581109)
  * Added a README.source file.

 -- Christo Buschek <crito@30loops.net>  Thu, 11 Mar 2011 12:41:59 +0000

haproxy (1.4.8-1) unstable; urgency=low

  * New upstream release.

 -- Arnaud Cornet <acornet@debian.org>  Fri, 18 Jun 2010 00:42:53 +0100

haproxy (1.4.4-1) unstable; urgency=low

  * New upstream release
  * Add splice and tproxy support
  * Add regparm optimization on i386
  * Switch to dpkg-source 3.0 (quilt) format

 -- Arnaud Cornet <acornet@debian.org>  Thu, 15 Apr 2010 20:00:34 +0100

haproxy (1.4.2-1) unstable; urgency=low

  * New upstream release
  * Remove debian/patches/haproxy.1-hyphen.patch gone upstream
  * Tighten quilt build dep (Closes: #567087)
  * standards-version goes 3.8.4 (no change)
  * Add $remote_fs to init.d script required start and stop

 -- Arnaud Cornet <acornet@debian.org>  Sat, 27 Mar 2010 15:19:48 +0000

haproxy (1.3.22-1) unstable; urgency=low

  * New upstream bugfix release

 -- Arnaud Cornet <acornet@debian.org>  Mon, 19 Oct 2009 22:31:45 +0100

haproxy (1.3.21-1) unstable; urgency=low

  [ Michael Shuler ]
  * New Upstream Version (Closes: #538992)
  * Added override for example shell scripts in docs (Closes: #530096)
  * Added upstream changelog to docs
  * Added debian/watch
  * Updated debian/copyright format
  * Added haproxy.1-hyphen.patch, to fix hyphen in man page
  * Upgrade Standards-Version to 3.8.3 (no change needed)