@@ -1,0 +1,2 @@
+" detect HAProxy configuration
+au BufRead,BufNewFile haproxy*.cfg              set filetype=haproxy
