@@ -1,6 +1,7 @@
 haproxy (1.4.23-1) UNRELEASED; urgency=low
 
   * New upstream version (Closes: #674447, #643650, #678953)
+  * Ship vim addon as vim-haproxy (Closes: #702893)
 
  -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 11 Apr 2013 13:37:16 +0300
 
